[gd_scene load_steps=2 format=3 uid="uid://b1qxs5x83su66"]

[ext_resource type="Script" uid="uid://dboi73qcq20vl" path="res://Scripts/options_menu.gd" id="1_mwbba"]

[node name="Options menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mwbba")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -66.0
offset_right = 165.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MouseSensitivity_button" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MouseSensitivity_button"]
layout_mode = 2
text = "Mouse Sensitivity:"

[node name="HSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/MouseSensitivity_button"]
custom_minimum_size = Vector2(146.465, 0)
layout_mode = 2
min_value = 0.1
max_value = 5.0
step = 0.1
value = 0.1

[node name="MSAA_button" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/MSAA_button"]
layout_mode = 2
text = "MSAA:"

[node name="OptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/MSAA_button"]
layout_mode = 2
size_flags_horizontal = 4
selected = 0
allow_reselect = true
item_count = 4
popup/item_0/text = "off"
popup/item_0/id = 0
popup/item_1/text = "2x"
popup/item_1/id = 1
popup/item_2/text = "4x"
popup/item_2/id = 2
popup/item_3/text = "8x"
popup/item_3/id = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back_button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Back"

[node name="MainMenu_button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
text = "Main menu"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MainMenu_button" to="." method="_on_main_menu_button_pressed"]
